--- a/src/input.css
+++ b/src/input.css
@@ -1,14 +1,18 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 
-.btn{
+.btn {
     @apply font-bold py-2 px-4 rounded ml-10;
 }
 
-.btn-blue{
+.btn-blue {
     @apply bg-blue-500 hover:bg-blue-600 text-white
 }
 
 @theme {
-  --font-poppins: "Poppins", sans-serif; 
+
+    --color-body-black: #050505;
+    --color-selected-text: #A3A3FF;
+    --color-theme: #5c318c;
+    --font-poppins: "Poppins", sans-serif;
 }
